Tab view (bad style)

--- a/MauiApp-Demo/MauiApp-Demo.csproj
+++ b/MauiApp-Demo/MauiApp-Demo.csproj
@@ -55,12 +55,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="FavoritesPage.xaml.cs">
+	    <DependentUpon>FavoritesPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="MovieDetailsPage.xaml.cs">
 	    <DependentUpon>MovieDetailsPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="FavoritesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MovieDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
